--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Сюда описание" />
+
+    <meta property="og:title" content="Сюда заголовок" />
+    <meta property="og:url" content="Сюда ссылку на сайт" />
+    <meta property="og:image" content="Сюда картинку" />
+    <meta property="twitter:card" content="summary_large_image" />
+
+    <link rel="icon" href="ico" sizes="any" />
+    <link rel="icon" href="svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="png" />
+
     <title>Stylelint and prettier preset</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
+
   <body>
     <div>Test</div>
   </body>
